<resources>
    <string name="app_name">智慧食安</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="page_error">页面出现错误!</string>

    <string name="main_tab_1">首页</string>
    <string name="main_tab_2">溯源</string>
    <string name="main_tab_3"></string>
    <string name="main_tab_4">稽查</string>
    <string name="main_tab_5">我的</string>
    <string name="waiting_for">敬请期待</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="open_camera_failed">摄像头打开失败</string>
    <string name="app_news">食安资讯</string>
    <string name="dining_info">餐厅信息</string>
    <string name="dcba">大餐备案</string>
    <string name="spsy">食品溯源</string>
    <string name="tscl">投诉处理</string>
    <string name="ycxc">远程巡查</string>
    <string name="xcjc">现场检查</string>
    <string name="ctsh">餐厅审核</string>
    <string name="sbsh">设备审核</string>
    <string name="please_input_mobile">请输入手机号</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="home_percent_title">餐厅总数/开餐数</string>
    <string name="check_task">审核任务</string>
    <string name="jc_task">稽查任务</string>
    <string name="complain_stat">投诉总量统计</string>
</resources>