<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_home"
        android:checked="true"
        android:icon="@drawable/select_home"
        android:title="@string/main_tab_1"/>
    <item android:id="@+id/menu_look"
        android:checked="true"
        android:icon="@drawable/select_scan"
        android:title="@string/main_tab_2"/>
    <item android:id="@+id/menu_mid"
        android:checked="true"
        android:icon="@null"
        android:title=""/>
    <item android:id="@+id/menu_select"
        android:checked="true"
        android:icon="@drawable/select_search"
        android:title="@string/main_tab_4"/>
    <item android:id="@+id/menu_mine"
        android:checked="true"
        android:icon="@drawable/select_mine"
        android:title="@string/main_tab_5"/>
</menu>